--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -52,7 +52,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Build and install
       run: |
-        rm -rf .eggs && pip install -e .
+        rm -rf .eggs && pip install -e .[all]
     - name: Test
       run: |
         python -m unittest discover -v -s tests
