[Fix]: known_standard_library -> extra_standard_library
This is compat with isort 5.0.0+

Signed-off-by: Zhipeng Han <hanzhipeng9@gmail.com>

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -33,7 +33,7 @@ jobs:
         echo "Runing flake8"
         flake8 foundation/ tests/
         echo "Runing isort"
-        isort -rc --check-only --diff foundation/ tests/
+        isort --check-only --diff foundation/ tests/
         echo "Runing yapf"
         yapf -r -d foundation/ tests/
 
