--- a/setup.cfg
+++ b/setup.cfg
@@ -9,11 +9,12 @@ line_length = 100
 multi_line_output = 3
 include_trailing_comma = True
 extra_standard_library = pkg_resources,setuptools
+known_standard_library = pkg_resources,setuptools
 known_first_party = foundation
 default_section = THIRDPARTY
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 no_lines_before = LOCALFOLDER
-known_third_party = cv2,matplotlib,numpy,portalocker,pycocotools,setuptools,six,torch,yacs,yaml
+known_third_party = cv2,matplotlib,numpy,portalocker,pycocotools,six,torch,yacs,yaml
 combine_as_imports = True
 force_grid_wrap = 0
 force_single_line = False
