--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,7 @@ addopts = tests/
 line_length = 100
 multi_line_output = 3
 include_trailing_comma = True
+# TODO: upgrade isort to 5.* when seed_isort_config is compatible
 known_standard_library = pkg_resources,setuptools
 known_first_party = foundation
 default_section = THIRDPARTY
