--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 isort yapf
+        pip install flake8 yapf isort==4.3.21
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint
       run: |
@@ -52,7 +52,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Build and install
       run: |
-        rm -rf .eggs && pip install -e .
+        rm -rf .eggs && pip install -e .[all]
     - name: Test
       run: |
         python -m unittest discover -v -s tests
