Using black to format code rather than yapf
Signed-off-by: Zhipeng Han <hanzhipeng9@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,27 +16,11 @@ combine_as_imports = True
 force_grid_wrap = 0
 force_single_line = False
 
-[yapf]
-based_on_style = pep8
-align_closing_bracket_with_visual_indent = False
-blank_line_before_nested_class_or_def = True
-blank_lines_around_top_level_definition = 2
-column_limit = 100
-dedent_closing_brackets = True
-indent_closing_brackets = False
-indent_dictionary_value = True
-join_multiple_lines = False
-space_between_ending_comma_and_closing_bracket = False
-spaces_around_power_operator = True
-spaces_before_comment = 2
-split_before_bitwise_operator = False
-split_before_expression_after_opening_paren = True
-split_before_dot = True
-split_before_logical_operator = False
-
 [flake8]
-ignore = E203,E266,E501,W503,E221
+ignore = W503, E203, E221, C901, C408, E741, C407, E741, C404
+# C404 dict comprehension ignored due to https://github.com/pytorch/pytorch/issues/41448
 max-line-length = 100
 max-complexity = 18
 select = B,C,E,F,W,T4,B9
-exclude = build,__init__.py
+exclude = build
+per-file-ignores = **/__init__.py:F401,F403
