--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 yapf isort
+        pip install flake8==3.8.4 black==20.8b1 isort==5.6.4
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint
       run: |
@@ -34,8 +34,8 @@ jobs:
         flake8 foundation/ tests/
         echo "Runing isort"
         isort --check-only --diff foundation/ tests/
-        echo "Runing yapf"
-        yapf -r -d foundation/ tests/
+        echo "Runing black"
+        black -l 100 foundation/ tests/
 
   test:
 
