--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,14 +26,14 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8==3.8.4 flake8-bugbear flake8-comprehensions black==20.8b1 isort==5.6.4
+        pip install flake8==3.8.4 flake8-bugbear flake8-comprehensions isort==5.6.4 black==20.8b1
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint
       run: |
         echo "Runing flake8"
         flake8 foundation/ tests/
         echo "Runing isort"
-        isort --check-only --diff foundation/ tests/
+        isort --check-only --sp . foundation/ tests/
         echo "Runing black"
         black -l 100 foundation/ tests/
 
