--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,7 @@ repos:
   rev: 3.8.4
   hooks:
     - id: flake8
+      additional_dependencies: ["flake8-bugbear", "flake8-comprehensions"]
 - repo: https://github.com/timothycrosley/isort
   rev: 5.6.4
   hooks:
