--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,11 @@ repos:
   rev: v3.1.0
   hooks:
     - id: trailing-whitespace
+    - id: check-yaml
+      args: ['--unsafe']
     - id: end-of-file-fixer
+    - id: requirements-txt-fixer
+    - id: fix-encoding-pragma
+      args: ['--remove']
     - id: mixed-line-ending
       args: ['--fix=lf']
