--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,7 +10,7 @@ on:
     branches: [ master ]
 
 jobs:
-  lint:
+  linter:
 
     runs-on: ubuntu-latest
     strategy:
@@ -39,7 +39,7 @@ jobs:
 
   test:
 
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     strategy:
       matrix:
         python-version: [3.6, 3.7, 3.8]
