--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.6]
 
     steps:
     - uses: actions/checkout@v2
@@ -26,8 +26,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8==3.8.4 flake8-bugbear flake8-comprehensions isort==5.6.4 black==20.8b1
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        python -m pip install flake8==3.8.4 flake8-bugbear flake8-comprehensions
+        python -m pip install isort==5.6.4 black==20.8b1
+        if [ -f requirements.txt ]; then python -m pip install -r requirements.txt; fi
     - name: Lint
       run: |
         echo "Runing flake8"
@@ -42,7 +43,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.6]
 
     steps:
     - uses: actions/checkout@v2
@@ -55,5 +56,4 @@ jobs:
         python -m pip install --upgrade pip
         rm -rf .eggs && CC=clang CXX=clang++ python -m pip install -e .[all]
     - name: Test
-      run: |
-        python -m unittest discover -v -s tests
+      run: python -m unittest discover -v -s tests
