--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -44,6 +44,14 @@ jobs:
     strategy:
       matrix:
         python-version: [3.6]
+        torch: [1.5, 1.6, 1.7]
+        include:
+          - torch: 1.5
+            torchvision: 0.6
+          - torch: 1.6
+            torchvision: 0.7
+          - torch: 1.7
+            torchvision: 0.8
 
     steps:
     - uses: actions/checkout@v2
@@ -51,9 +59,18 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Cache dependencies
+      uses: actions/cache@v2
+      with:
+        path: |
+          ${{ env.pythonLocation }}/lib/python3.6/site-packages
+          ~/.torch
+        key: ${{ runner.os }}-torch${{ matrix.torch }}-${{ hashFiles('setup.py') }}-2020070
     - name: Build and install
       run: |
         python -m pip install --upgrade pip
+        python -m pip install ninja opencv-python-headless onnx pytest-xdist
+        python -m pip install torch==${{matrix.torch}} torchvision==${{matrix.torchvision}} -f https://download.pytorch.org/whl/torch_stable.html
         rm -rf .eggs && CC=clang CXX=clang++ python -m pip install -e .[all]
     - name: Test
       run: python -m unittest discover -v -s tests
