--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -66,11 +66,12 @@ jobs:
           ${{ env.pythonLocation }}/lib/python3.6/site-packages
           ~/.torch
         key: ${{ runner.os }}-torch${{ matrix.torch }}-${{ hashFiles('setup.py') }}-2020070
-    - name: Build and install
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         python -m pip install ninja opencv-python-headless onnx pytest-xdist
         python -m pip install torch==${{matrix.torch}} torchvision==${{matrix.torchvision}} -f https://download.pytorch.org/whl/torch_stable.html
-        rm -rf .eggs && CC=clang CXX=clang++ python -m pip install -e .[all]
-    - name: Test
+    - name: Build and install
+      run: rm -rf .eggs && CC=clang CXX=clang++ python -m pip install -e .[all]
+    - name: Run unittests
       run: python -m unittest discover -v -s tests
