--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -69,7 +69,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install ninja opencv-python-headless onnx pytest-xdist
+        python -m pip install pytest-xdist
         python -m pip install torch==${{matrix.torch}} torchvision==${{matrix.torchvision}} -f https://download.pytorch.org/whl/torch_stable.html
     - name: Build and install
       run: CC=clang CXX=clang++ python -m pip install -e .[all]
