--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,33 +1,27 @@
 exclude: ^tests/data/
 repos:
 - repo: https://gitlab.com/pycqa/flake8
-  rev: 3.7.9
+  rev: 3.8.4
   hooks:
     - id: flake8
-      args: [
-        '--ignore=E203,E266,E501,W503,E221',
-        '--max-line-length=100',
-        '--max-complexity=18',
-        '--select=B,C,E,F,W,T4,B9',
-        '--exclude=build,__init__.py'
-      ]
+      additional_dependencies: ["flake8-bugbear", "flake8-comprehensions"]
 - repo: https://github.com/timothycrosley/isort
-  rev: 5.2.1
+  rev: 5.6.4
   hooks:
     - id: isort
-- repo: https://github.com/pre-commit/mirrors-yapf
-  rev: v0.29.0
+- repo: https://github.com/psf/black
+  rev: 20.8b1
   hooks:
-    - id: yapf
+    - id: black
+      language_version: python3
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v2.5.0
+  rev: v3.1.0
   hooks:
     - id: trailing-whitespace
     - id: check-yaml
       args: ['--unsafe']
     - id: end-of-file-fixer
     - id: requirements-txt-fixer
-    - id: double-quote-string-fixer
     - id: fix-encoding-pragma
       args: ['--remove']
     - id: mixed-line-ending
