--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -54,9 +54,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pytest-xdist
         python -m pip install torch torchvision -f https://download.pytorch.org/whl/torch_stable.html
     - name: Build and install
       run: CC=clang CXX=clang++ python -m pip install -e .[all]
-    - name: Run unittests
-      run: python -m pytest -n 4 -v tests/
+    - name: Run Unit Tests
+      run: python -m unittest discover -v -s tests
