--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6]
+        python-version: [3.9]
 
     steps:
     - uses: actions/checkout@v2
@@ -25,10 +25,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install flake8==3.8.4 flake8-bugbear flake8-comprehensions
-        python -m pip install isort==5.6.4 black==20.8b1
-        if [ -f requirements.txt ]; then python -m pip install -r requirements.txt; fi
+        curl -sSL https://install.python-poetry.org | python3 -
+        poetry install
     - name: Lint
       run: |
         echo "Runing flake8"
@@ -37,25 +35,3 @@ jobs:
         isort --check-only foundation/ tests/
         echo "Runing black"
         black foundation/ tests/
-
-  test:
-
-    runs-on: macos-latest
-    strategy:
-      matrix:
-        python-version: [3.6]
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install torch torchvision -f https://download.pytorch.org/whl/torch_stable.html
-    - name: Build and install
-      run: CC=clang CXX=clang++ python -m pip install -e .[all]
-    - name: Run Unit Tests
-      run: python -m unittest discover -v -s tests
