--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,26 +1,26 @@
 exclude: ^tests/data/
 repos:
 - repo: https://gitlab.com/pycqa/flake8
-  rev: 3.8.4
+  rev: 5.0.4
   hooks:
     - id: flake8
       additional_dependencies: ["flake8-bugbear", "flake8-comprehensions"]
-- repo: https://github.com/timothycrosley/isort
-  rev: 5.6.4
+- repo: https://github.com/pycqa/isort
+  rev: 5.10.1
   hooks:
     - id: isort
 - repo: https://github.com/psf/black
-  rev: 20.8b1
+  rev: 22.10.0
   hooks:
     - id: black
       language_version: python3
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v3.1.0
+  rev: v4.3.0
   hooks:
     - id: trailing-whitespace
+    - id: end-of-file-fixer
     - id: check-yaml
       args: ['--unsafe']
-    - id: end-of-file-fixer
     - id: requirements-txt-fixer
     - id: fix-encoding-pragma
       args: ['--remove']
