--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: build
+name: CI
 
 on:
   push:
@@ -15,22 +15,31 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6]
+        python-version: [3.9]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install Poetry
+      uses: snok/install-poetry@v1
+      with:
+        virtualenvs-create: true
+        virtualenvs-in-project: true
+    - name: Load cached venv
+      id: cached-poetry-dependencies
+      uses: actions/cache@v3
+      with:
+        path: .venv
+        key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install flake8==3.8.4 flake8-bugbear flake8-comprehensions
-        python -m pip install isort==5.6.4 black==20.8b1
-        if [ -f requirements.txt ]; then python -m pip install -r requirements.txt; fi
+      if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+      run: poetry install --no-interaction --no-root
     - name: Lint
       run: |
+        source .venv/bin/activate
         echo "Runing flake8"
         flake8 foundation/ tests/
         echo "Runing isort"
@@ -38,24 +47,42 @@ jobs:
         echo "Runing black"
         black foundation/ tests/
 
-  test:
+  macos-tests:
 
     runs-on: macos-latest
     strategy:
       matrix:
-        python-version: [3.6]
+        python-version: [3.9]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install Poetry
+      uses: snok/install-poetry@v1
+      with:
+        virtualenvs-create: true
+        virtualenvs-in-project: true
+    - name: Load cached venv
+      id: cached-poetry-dependencies
+      uses: actions/cache@v3
+      with:
+        path: .venv
+        key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
     - name: Install dependencies
+      if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+      run: poetry install --no-interaction --no-root
+    - name: Install library
+      run: poetry install --no-interaction
+    - name: Run tests
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install torch torchvision -f https://download.pytorch.org/whl/torch_stable.html
-    - name: Build and install
-      run: CC=clang CXX=clang++ python -m pip install -e .[all]
-    - name: Run Unit Tests
-      run: python -m unittest discover -v -s tests
+        echo "Running tests"
+        source .venv/bin/activate
+        pytest -n 8 tests
+    - name: Upload coverage
+      uses: codecov/codecov-action@v1
+      with:
+        file: .out/coverage.xml
+        fail_ci_if_error: false
