--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,34 @@
+[tool.poetry]
+name = "Foundation"
+version = "0.0.1"
+description = "Fundation"
+authors = ["Your Name <you@example.com>"]
+exclude = ["tests"]
+packages = [
+    { include = "foundation" }
+]
+
+[tool.poetry.dependencies]
+# Reference: https://python-poetry.org/docs/
+python = ">=3.9, <3.10"
+coloredlogs = "^15.0.0"
+six = "~1.16.0"
+tabulate = "~0.9.0"
+
+[tool.poetry.group.dev.dependencies]
+flake8 = "5.0.4"
+flake8-bugbear = "*"
+flake8-comprehensions = "*"
+isort = "5.10.1"
+black = "22.10.0"
+pre-commit = "2.20.0"
+genbadge = {version = "^1.1.0", extras = ["coverage", "tests"]}
+pytest = "^6.2.5"
+pytest-cov = "^4.0.0"
+pytest-xdist = {version = "^2.5.0", extras = ["psutil"]}
+
 [tool.black]
+# Reference: https://github.com/psf/black
 line-length = 100
 include = '\.pyi?$'
 exclude = '''
@@ -17,3 +47,35 @@ exclude = '''
   )/
 )
 '''
+
+[tool.isort]
+# Reference: https://github.com/PyCQA/isort
+profile = "black"
+line_length = 100
+multi_line_output = 3
+include_trailing_comma = true
+default_section= "FIRSTPARTY"
+sections= ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
+no_lines_before = ["STDLIB", "LOCALFOLDER"]
+
+[tool.pytest.ini_options]
+# Reference: https://docs.pytest.org/
+addopts = "--cov-report html:.out/htmlcov --cov-report term --cov-report xml:.out/coverage.xml --cov foundation"
+testpaths = [
+    "tests",
+]
+
+[tool.coverage.html]
+directory = ".out/htmlcov"
+
+[tool.coverage.run]
+source = ["foundation"]
+omit = ["tests/*"]
+
+[tool.coverage.report]
+# Regexes for lines to exclude from consideration
+exclude_lines = [
+    "pragma: no cover", # Have to re-enable the standard pragma
+    "if __name__ == .__main__.:", # Don't complain about code within main
+    "def main[(]"
+]
