--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,28 +1,15 @@
-exclude: ^tests/data/
 repos:
-- repo: https://github.com/pycqa/flake8
-  rev: 5.0.4
-  hooks:
-    - id: flake8
-      additional_dependencies: ["flake8-bugbear", "flake8-comprehensions"]
-- repo: https://github.com/pycqa/isort
-  rev: 5.10.1
-  hooks:
-    - id: isort
-- repo: https://github.com/psf/black
-  rev: 22.10.0
-  hooks:
-    - id: black
-      language_version: python3
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.3.0
-  hooks:
-    - id: trailing-whitespace
-    - id: end-of-file-fixer
-    - id: check-yaml
-      args: ['--unsafe']
-    - id: requirements-txt-fixer
-    - id: fix-encoding-pragma
-      args: ['--remove']
-    - id: mixed-line-ending
-      args: ['--fix=lf']
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.4.0
+    hooks:
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-yaml
+        args: ['--unsafe'] # checks syntax without loading yaml
+      - id: check-added-large-files
+  - repo: local
+    hooks:
+      - id: make-format
+        name: autoformat
+        entry: make format
+        language: system
