--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,9 +9,9 @@ repos:
   - id: check-added-large-files
 - repo: local
   hooks:
-  - id: make
-    name: style format and type check
-    entry: make
+  - id: make-style
+    name: autoformat
+    entry: make style
     language: system
 - repo: https://github.com/jumanjihouse/pre-commit-hook-yamlfmt
   rev: 0.2.3
