refactor: autoformat -> autostyle
Signed-off-by: Zhipeng Han <hanzhipeng9@gmail.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,7 @@ repos:
 - repo: local
   hooks:
   - id: make-style
-    name: autoformat
+    name: autostyle
     entry: make style
     language: system
 - repo: https://github.com/jumanjihouse/pre-commit-hook-yamlfmt
