--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,9 +27,9 @@ dev = [
     "pytest-xdist~=3.3.1",
     "pytest-asyncio",
     "mypy~=1.4.0",  # stactic type checker
-    "docformatter[tomli]~=1.7.5",
     "pre-commit~=3.2.2",
     "ruff~=0.4.2",
+    "mdformat~=0.7.17",
     "mdformat-ruff~=0.1.3",
     "ipdb",
 ]
